{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 219,
  "lineage": "ff2b4cf9-35c7-3ffd-6ae2-5c3fded456d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff86122fd4ad7208",
            "arn": "arn:aws:ec2:af-south-1:507592092345:instance/i-0ed33eabab215d17f",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web1_host_role",
            "id": "i-0ed33eabab215d17f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-039e1127206d7256d",
            "private_dns": "ip-10-0-2-127.af-south-1.compute.internal",
            "private_ip": "10.0.2.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d52b10e172d50e7c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c48a9ef2d9212dd5",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02a9e5c35ccbcb327"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.web1",
            "aws_iam_role.ssm_role",
            "aws_security_group.PubSubnetAccess",
            "aws_subnet.SubnetPrivate",
            "aws_vpc.mainvpc",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MainGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:507592092345:internet-gateway/igw-0782a278bd16441cc",
            "id": "igw-0782a278bd16441cc",
            "owner_id": "507592092345",
            "vpc_id": "vpc-09b7a331a38889208"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MainRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:507592092345:route-table/rtb-0be2d7b5d5dd3f92b",
            "id": "rtb-0be2d7b5d5dd3f92b",
            "owner_id": "507592092345",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0782a278bd16441cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09b7a331a38889208"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MainGW",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PubRouteAssoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ae801bfa7520414",
            "route_table_id": "rtb-0be2d7b5d5dd3f92b",
            "subnet_id": "subnet-04ebf0e4973f2d512"
          },
          "dependencies": [
            "aws_subnet.SubnetPublic",
            "aws_vpc.mainvpc",
            "aws_internet_gateway.MainGW",
            "aws_route_table.MainRoute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PubSubnetAccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:507592092345:security-group/sg-02a9e5c35ccbcb327",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a9e5c35ccbcb327",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20211115135311003100000002",
            "name_prefix": "terraform-",
            "owner_id": "507592092345",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09b7a331a38889208"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SubnetPrivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:507592092345:subnet/subnet-0c48a9ef2d9212dd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c48a9ef2d9212dd5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507592092345",
            "vpc_id": "vpc-09b7a331a38889208"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SubnetPublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:507592092345:subnet/subnet-04ebf0e4973f2d512",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04ebf0e4973f2d512",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "507592092345",
            "vpc_id": "vpc-09b7a331a38889208"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SubnetUnused",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:507592092345:subnet/subnet-005b1361de93f3365",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1c",
            "availability_zone_id": "afs1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-005b1361de93f3365",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "507592092345",
            "vpc_id": "vpc-09b7a331a38889208"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:507592092345:vpc/vpc-09b7a331a38889208",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9c0e62f84f54931",
            "default_route_table_id": "rtb-0b8c8a6d2f7c34f0e",
            "default_security_group_id": "sg-0150573d64e852b30",
            "dhcp_options_id": "dopt-005a8abdfa453495c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09b7a331a38889208",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b8c8a6d2f7c34f0e",
            "owner_id": "507592092345"
          }
        }
      ]
    },
    {
      "module": "module.elb_http.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:af-south-1:507592092345:loadbalancer/pubELB",
            "availability_zones": [
              "af-south-1a",
              "af-south-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "pubELB-28680555.af-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "pubELB",
            "idle_timeout": 60,
            "instances": [
              "i-0ed33eabab215d17f"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "https",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:af-south-1:507592092345:certificate/0218e2f7-60c5-4e28-ae67-ddd037213014"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "pubELB",
            "security_groups": [
              "sg-02a9e5c35ccbcb327"
            ],
            "source_security_group": "507592092345/terraform-20211115135311003100000002",
            "source_security_group_id": "sg-02a9e5c35ccbcb327",
            "subnets": [
              "subnet-04ebf0e4973f2d512",
              "subnet-0c48a9ef2d9212dd5"
            ],
            "tags": {
              "Name": "pubELB"
            },
            "tags_all": {
              "Name": "pubELB"
            },
            "zone_id": "Z268VQBMOI5EKX"
          },
          "dependencies": [
            "aws_security_group.PubSubnetAccess",
            "aws_subnet.SubnetPrivate",
            "aws_subnet.SubnetPublic",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    }
  ]
}